# data-gen

./: .gitignore  README.md  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
data_gen/: __main__.py  data.py  depgraph.py  inspection.py  parameters.py  sql_enums.py  table_node.py
data_migration/: cmdline.py  cognito.py  data_templates.py  populate.py  users.py  utils.py
data_migration/default_templates/: Makefile  congnito_config.json  relationships.json  users.csv
