[tool.poetry]
name = "data-gen"
version = "0.1.0"
description = "A Postgres Data Generator Project"
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [
    { include = "data_gen" },
    { include = "data_migration" }
]

include=["data_migration/default_templates/**"]


[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.3"
Faker = "^25.8.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
pygraphviz = "^1.11"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
data-gen = "data_gen.cli:main"
data-migrate = "data_migration.cmdline:cli"
